# EDLUT_BAXTER_DELAYS

./: README.md
rosPackages/ControllerPC/src/edlut_ros/: CMakeLists.txt
rosPackages/ControllerPC/src/edlut_ros/cfg/: DelayGeneratorDynParameters.cfg  JointSpringsExample.cfg  JointsPD.cfg
rosPackages/ControllerPC/src/edlut_ros/include/edlut_ros/: DelayGeneratorDynParams.h  InterpolatorDynParameters.h  PDSupervisor.h  PDSupervisor_noDelay.h  Q_InterpolatorTrajectoryController.h  Q_InterpolatorTrajectoryController_compactDelay.h  Q_InterpolatorTrajectoryGenerator.h  Q_TrajectoryController.h  Q_TrajectoryControllerRandom.h  Q_TrajectoryControllerRandom_compactDelay.h  Q_TrajectoryController_compactDelay.h  ROSErrorCalculator_FullStateCompactDelay.h  ROSRBFBank_compactDelay.h  (+10 more)
rosPackages/ControllerPC/src/edlut_ros/launch/: PD_circle_delays.launch  artificial_delays_circle_trajectory_bio_delay100ms.launch  artificial_delays_circle_trajectory_bio_delay25ms.launch  artificial_delays_circle_trajectory_bio_delay35ms.launch  artificial_delays_circle_trajectory_bio_delay40ms.launch  artificial_delays_circle_trajectory_bio_delay60ms.launch  artificial_delays_circle_trajectory_bio_delay85ms.launch  artificial_delays_circle_trajectory_bio_delay90ms.launch  artificial_delays_inclined_circle_trajectory.launch  position_control_mode_circle_trajectory.launch  position_control_mode_inclined_circle_trajectory.launch
rosPackages/ControllerPC/src/edlut_ros/msg/: FullStateCompactDelay.msg
rosPackages/ControllerPC/src/edlut_ros/src/: DelayGeneratorDynParams.cpp  InterpolatorDynParameters.cpp  MAE_velocity.py  NetworkGeneratorIODCNconnection_6joints_local_connection_RBF_EXTENDED_4MF_per_GrC_TOTAL_CONNECTION.py  PDSupervisor.cpp  PDSupervisor_noDelay.cpp  Q_InterpolatorTrajectoryController.cpp  Q_InterpolatorTrajectoryController_compactDelay.cpp  Q_InterpolatorTrajectoryGenerator.cpp  Q_TrajectoryController.cpp  Q_TrajectoryControllerRandom.cpp  Q_TrajectoryControllerRandom_compactDelay.cpp  Q_TrajectoryController_compactDelay.cpp  ROSErrorCalculator_FullStateCompactDelay.cpp  ROSFullStateCalculatorCompact.cpp  ROSPoissonGenerator.cpp  ROSPoissonGenerator_compactDelay.cpp  ROSRBFBank_compactDelay.cpp  ROSRBFBank_delay.cpp  ROSSpikeDecoderCompactFutureTorque.cpp  ROSSpikeDecoderCompactFutureTorque_compactDelay.cpp  ROSTopicInputDriver.cpp  RasterPlot_and_AnalogSignal.py  RasterPlot_and_AnalogSignal_CompactDelay.py  TEST_cerebellar_torque_publisher.cpp  TorqueAddition.cpp  TorqueAddition_Delay.cpp  TrajectoryPlot2.py  analog_cerebellum.py  baxter_arm_state_node_sync.cpp  baxter_arm_state_node_sync_compactDelay.cpp  baxter_arm_state_node_sync_compactDelay_interpolation.cpp  baxter_position_command_node.cpp  baxter_position_command_node_delay.cpp  baxter_torque_command_node_delays.cpp  current_and_desired_position_to_file.py  current_position_to_file.py  delayGenerator_GammaDistribution_node.cpp  delayGenerator_fixed_node.cpp  delay_analog_node.cpp  (+41 more)
rosPackages/ControllerPC/src/edlut_ros/trajectory_circle_eight_sequence/: circleEight_sequence_position.txt  circleEight_sequence_velocity.txt
rosPackages/ControllerPC/src/edlut_ros/trajectory_data_circle/: Network_6_joints_10MF_per_RBF_4MF_per_GrC_CIRCLE_NEW_LEARNING_RULE.cfg  Network_6_joints_10MF_per_RBF_4MF_per_GrC_CIRCLE_NEW_LEARNING_RULE_RAND_DELAY.cfg  Network_6_joints_10MF_per_RBF_4MF_per_GrC_CIRCLE_NEW_LEARNING_RULE_RAND_DELAY_sinusoidal_kernel.cfg  Network_6_joints_10MF_per_RBF_4MF_per_GrC_CIRCLE_NEW_LEARNING_RULE_bio_delay100ms.cfg  Network_6_joints_10MF_per_RBF_4MF_per_GrC_CIRCLE_NEW_LEARNING_RULE_bio_delay20ms.cfg  Network_6_joints_10MF_per_RBF_4MF_per_GrC_CIRCLE_NEW_LEARNING_RULE_bio_delay25ms.cfg  Network_6_joints_10MF_per_RBF_4MF_per_GrC_CIRCLE_NEW_LEARNING_RULE_bio_delay35ms.cfg  Network_6_joints_10MF_per_RBF_4MF_per_GrC_CIRCLE_NEW_LEARNING_RULE_bio_delay40ms.cfg  Network_6_joints_10MF_per_RBF_4MF_per_GrC_CIRCLE_NEW_LEARNING_RULE_bio_delay60ms.cfg  Network_6_joints_10MF_per_RBF_4MF_per_GrC_CIRCLE_NEW_LEARNING_RULE_bio_delay70ms.cfg  Network_6_joints_10MF_per_RBF_4MF_per_GrC_CIRCLE_NEW_LEARNING_RULE_bio_delay80ms.cfg  Network_6_joints_10MF_per_RBF_4MF_per_GrC_CIRCLE_NEW_LEARNING_RULE_bio_delay85ms.cfg  Network_6_joints_10MF_per_RBF_4MF_per_GrC_CIRCLE_NEW_LEARNING_RULE_bio_delay90ms.cfg  RESULTADOS.ods  Weights_6_joints_10MF_per_RBF_4MF_per_GrC_CIRCLE.cfg  Weights_6_joints_10MF_per_RBF_4MF_per_GrC_CIRCLE_delays.cfg  circle_positionControlMode_currentPositions.txt  circle_positionControlMode_desiredPositions.txt  horizontalCircle_1000samples_2seconds_r04_r12_position.txt  horizontalCircle_1000samples_2seconds_r04_r12_velocity.txt  horizontalCircle_1000samples_2seconds_r12_xyz.txt  positionControl_current_xyz.txt
rosPackages/ControllerPC/src/edlut_ros/trajectory_data_eight/: Network_6_joints_10MF_per_RBF_4MF_per_GrC_EIGHT_LOOP_NEW_LEARNING_RULE.cfg  eightTrajectory_1000samples_2seconds_r04_r12_velocity.txt  eightTrajectory_1000samples_2seconds_r04_r12_xyz.txt
rosPackages/ControllerPC/src/edlut_ros/trajectory_data_inclined_circle/: moveit_trajectory_inclined_30_position.txt  moveit_trajectory_inclined_30_velocity.txt  moveit_trajectory_inclined_30_xyz_noGripper.txt  pd_incline_circle.yaml  positionControl_current_xyz.txt  toprque_PD_inclined_circle.txt
rosPackages/RaspberryPi/src/edlut_ros/: CMakeLists.txt  package.xml
rosPackages/RaspberryPi/src/edlut_ros/launch/: borrar.launch  position_control_mode_circle_trajectory.launch  rtt.launch
rosPackages/RaspberryPi/src/edlut_ros/msg/: AnalogCompactDelay.msg
rosPackages/RaspberryPi/src/edlut_ros/src/: Q_TrajectoryController.cpp  Q_TrajectoryGenerator.cpp  TorqueAddition_Delay_PD_Wifi.cpp  baxter_position_command_node.cpp  baxter_position_command_node_DelayStats.cpp  baxter_torque_command_node_delays.cpp  q_trajectory_generator_node.cpp  raspberry_PDSupervisor.cpp  raspberry_pd_supervisor_node.cpp  robot_enabler_node.py  rtt_emitter.cpp  rtt_receiver.cpp  rtt_statistics.py  system_time_comparer.py  torque_final_node_delay_PD_Wifi.cpp  wifi_testNode_raspberry.cpp  wireless_robot_state.cpp
(+346 files in other folders)
